@@ -18,7 +18,7 @@
 require File.dirname(__FILE__) + '/../test_helper'
 
 class ActivityTest < Test::Unit::TestCase
-  fixtures :projects, :versions, :users, :roles, :members, :issues, :journals, :journal_details,
+  fixtures :projects, :versions, :attachments, :users, :roles, :members, :issues, :journals, :journal_details,
            :trackers, :projects_trackers, :issue_statuses, :enabled_modules, :enumerations, :boards, :messages
 
   def setup
@@ -70,6 +70,18 @@ class ActivityTest < Test::Unit::TestCase
     assert(events.size > 0)
     assert(events.size <= 10)
     assert_nil(events.detect {|e| e.event_author != user})
+  end
+  
+  def test_files_activity
+    f = Redmine::Activity::Fetcher.new(User.anonymous, :project => Project.find(1))
+    f.scope = ['files']
+    events = f.events
+    
+    assert_kind_of Array, events
+    assert events.include?(Attachment.find_by_container_type_and_container_id('Project', 1))
+    assert events.include?(Attachment.find_by_container_type_and_container_id('Version', 1))
+    assert_equal [Attachment], events.collect(&:class).uniq
+    assert_equal %w(Project Version), events.collect(&:container_type).uniq.sort
   end
   
   private
